# autorestify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
autorestify/: __init__.py  main.py
autorestify/api/: __init__.py  app_factory.py  router_factory.py
autorestify/core/: __init__.py  engine.py  schema_inference.py  security.py
autorestify/storage/: __init__.py  base.py  dynamic_models.py  repository.py
model2api/: __init__.py  main.py
model2api/api/: __init__.py  app_factory.py  router_factory.py
model2api/core/: __init__.py  engine.py  schema_inference.py  security.py
model2api/storage/: __init__.py  base.py  dynamic_models.py  repository.py
tests/: test_auth.py  test_routes.py  test_schema.py  test_storage.py
